@startuml


class ApplicationPOT {
  +getInstance()
  +getCurrentSession()
}

class UserSession {
  +getUserEmail()
}

class AnalyseFreelancerPaymentsUI{

}

class AnalyseFreelancerPaymentsController{
  +List<String> getListStats()
  +List<String> getFreeSortedByPayment()
  +ArrayList<Freelancer> sortByName(ArrayList<Freelancer> listOfFreeTrans)
}

class Platform {
  -String designation

  +OrganizationsRegister getOrganizationsRegister()
}

class Collaborator {
  -String name
  -String email
}

class Manager {
  -String name
  -String email
}

class OrganizationsRegister{
  +Organization getOrganizationByUserEmail(String email)
}

class Organization {
    -String designation

    +ArrayList<Freelancer> getListOfFreeTrans()
    +List<String> getFreelancersPaymentsStatisticsDoneByOrg(ArrayList<Freelancer> m_lstFreelancers)
    +Double calculateMeanP(Freelancer free)
    +Double calculateDeviationP(Freelancer free, double mean)
    +ArrayList<Freelancer> getListSortedByPayments(ArrayList<Freelancer> m_lstFreelancers)
}

class PaymentTransaction {
  -String id

  +Freelancer getFreelancer()
}

class User {
  -String name
  -String email
  -String password
}

class PaymentTransactionList {
  +List<PaymentTransaction> getPaymentTransactions()
}

class Freelancer {
  -String id
  -String name
  -String email
  -Integer NIF
  -String IBAN
  -double OverallPayments

  +String getId()
}



AnalyseFreelancerPaymentsUI ..> AnalyseFreelancerPaymentsController
AnalyseFreelancerPaymentsController ..> Platform
AnalyseFreelancerPaymentsController ..> OrganizationsRegister
AnalyseFreelancerPaymentsController ..> UserSession
AnalyseFreelancerPaymentsController ..> ApplicationPOT
AnalyseFreelancerPaymentsController ..> Organization


Platform "1" --> "*" Organization: has registered
Platform "1" --> "*" User: has registered

Collaborator "0..1" --> "1" User: acts as
Manager "0..1" --> "1" User: acts as

Organization "1" --> "1" PaymentTransactionList: has
Organization "1" --> "1" Manager : has
Organization "1" --> "1" Collaborator : has

PaymentTransaction "*" --> "1" Freelancer: related to

Platform "1" --> "1" OrganizationsRegister :has
OrganizationsRegister "1" --> "*" Organization : has

PaymentTransactionList "1" --> "*" PaymentTransaction: has






@enduml
